--- a/index.html
+++ b/index.html
@@ -2,25 +2,85 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https: //fonts.googleapis.com/css2?family= Balsamiq +Sans:wght@700 & display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <title>MovieHub</title>
 </head>
+
 <body>
+
     <div class="container">
         <div class="navbar">
-        <img src="css/img/mh.png" class="logo">
-        <nav>
-            <ul>
-                <li><a href="#">ГЛАВНАЯ</a></li>
-                <li><a href="#">ЖАНР</a></li>
-                <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
-                <li><a href="#">FAQ</a></li>
-            </ul>
-        </nav>
-        <img src="css/img/menu.png" alt="">
+            <img src="css/img/mh.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="http://127.0.0.1:51253/index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="#" class="down">ЖАНР <span class="material-symbols-outlined">
+                expand_more
+                   </span></a>
+                   <ul class="submenu">
+                       <li><a href=""></a>аниме</li>
+                       <li><a href=""></a>биографический</li>
+                       <li><a href=""></a>боевик</li>
+                       <li><a href=""></a>вестерн</li>
+                       <li><a href=""></a>детектив</li>
+                       <li><a href=""></a>документальный</li>
+                       <li><a href=""></a>криминальный</li>
+                       <li><a href=""></a>историчекий</li>
+                       <li><a href=""></a>фантастика</li>
+                       <li><a href=""></a>фэнтэзи</li>
+                       <li><a href=""></a>мелодрама</li>
+                       <li><a href=""></a>музыкальное</li>
+                       <li><a href=""></a>Хорор</li>
+
+                   </ul>
+                   </li>
+                    <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </nav>
+            <img src="css/img/menu.png" class="menu-icon">
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>MovieHub</h1>
+                <p>На нашем сайте вы можете бесплатно посмотреть любые фильмы и новинки!</p>
+                <button type="button"> Перейти к просмотру</button>
+            </div>
+            <div class="col">
+                <a href="http://127.0.0.1:51253/Aquaman.html">
+                    <div class="card card1">
+                        <h5>
+                            Aquaman
+                        </h5>
+                    </div>
+                </a>
+                <a href="http://127.0.0.1:51253/Joker.html">
+                    <div class="card card2">
+                        <h5>
+                            Joker
+                        </h5>
+                    </div>
+                </a>
+                <a href="http://127.0.0.1:51253/Parker.html">
+                    <div class="card card3">
+                        <h5>
+                            Parker
+                        </h5>
+                    </div>
+                </a>
+                <a href="http://127.0.0.1:51253/Titanic.html">
+                    <div class="card card4">
+                        <h5>
+                            Titanic
+                        </h5>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </body>
