--- a/films/aquaman.html
+++ b/films/aquaman.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/films.css">
+    <link rel="stylesheet" href="../css/films.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
@@ -14,26 +13,26 @@
 
     <div class="container">
         <div class="navbar">
-            <img src="css/img/mh.png" class="logo">
+            <a href="index.html"><img src="../css/img/mh.png" class="logo"></a>
             <nav>
                 <ul>
-                    <li><a href="http://127.0.0.1:51253/index.html">ГЛАВНАЯ</a></li>
+                    <li><a href="index.html">ГЛАВНАЯ</a></li>
                     <li><a href="#">ЖАНР</a></li>
                     <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
-            <img src="css/img/menu.png" class="menu-icon">
+            <img src="../css/img/menu.png" class="menu-icon">
         </div>
         <div class="row">
             <div class="card">
-                <img src="css/films/aquaman.jpg" alt="">
+                <img src="../css/img/films/aquaman.jpg" alt="">
             </div>
-               <div class="info">
+            <div class="info">
                 <h5>Aquaman</h5>
                 <p>Артур Карри был сыном работника маяка по имени Том Карри и женщины по имени Атланна. Артур уже в подростковом возрасте демонстрировал невероятную силу и скорость, а также возможность дышать под водой и разговаривать с рыбами. Будучи при смерти, Атланна раскрыла мальчику правду: она была Королевой Атлантиды, находившейся в изгнании, и пообещала, что однажды Артур станет правителем семи морей. Его отец дал ему образование и научил управлять своими возможностями, что в конечном итоге помогло ему стать героем по имени Аквамен.</p>
+                <a href=""><button type="button">Викторина!</button></a>
             </div>
         </div>
     </div>
-    </body>
-</html>
+</body></html>
