--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script src="js/random.js"></script>
     <title>MovieHub</title>
 </head>
 
@@ -15,31 +15,27 @@
 
     <div class="container">
         <div class="navbar">
-            <img src="css/img/mh.png" class="logo">
+            <a href="index.html"><img src="css/img/mh.png" class="logo"></a>
             <nav>
                 <ul>
-                    <li><a href="http://127.0.0.1:51253/index.html">ГЛАВНАЯ</a></li>
-                    <li><a href="#" class="down">ЖАНР <span class="material-symbols-outlined">
-                expand_more
-                   </span></a>
-                   <ul class="submenu">
-                       <li><a href=""></a>аниме</li>
-                       <li><a href=""></a>биографический</li>
-                       <li><a href=""></a>боевик</li>
-                       <li><a href=""></a>вестерн</li>
-                       <li><a href=""></a>детектив</li>
-                       <li><a href=""></a>документальный</li>
-                       <li><a href=""></a>криминальный</li>
-                       <li><a href=""></a>историчекий</li>
-                       <li><a href=""></a>фантастика</li>
-                       <li><a href=""></a>фэнтэзи</li>
-                       <li><a href=""></a>мелодрама</li>
-                       <li><a href=""></a>музыкальное</li>
-                       <li><a href=""></a>Хорор</li>
-
-                   </ul>
-                   </li>
-                    <li><a href="#">СЛУЧАЙНОСТЬ</a></li>
+                    <li><a href="#">ГЛАВНАЯ</a></li>
+                    <li><a href="" class="down">ЖАНР<span class="material-symbols-outlined">
+                                expand_more
+                            </span></a>
+                        <ul class="submenu">
+                            <li><a href="">Боевик</a></li>
+                            <li><a href="">Вестерн</a></li>
+                            <li><a href="">Детектив</a></li>
+                            <li><a href="">Драма</a></li>
+                            <li><a href="">Комедия</a></li>
+                            <li><a href="">Мелодрама</a></li>
+                            <li><a href="">Нуар</a></li>
+                            <li><a href="">Сказка</a></li>
+                            <li><a href="">Трагедия</a></li>
+                            <li><a href="">Ужасы</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" onclick="rndSite();">СЛУЧАЙНОСТЬ</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
@@ -52,28 +48,28 @@
                 <button type="button"> Перейти к просмотру</button>
             </div>
             <div class="col">
-                <a href="http://127.0.0.1:51253/Aquaman.html">
+                <a href="films/aquaman.html">
                     <div class="card card1">
                         <h5>
                             Aquaman
                         </h5>
                     </div>
                 </a>
-                <a href="http://127.0.0.1:51253/Joker.html">
+                <a href="films/joker.html">
                     <div class="card card2">
                         <h5>
                             Joker
                         </h5>
                     </div>
                 </a>
-                <a href="http://127.0.0.1:51253/Parker.html">
+                <a href="films/parker.html">
                     <div class="card card3">
                         <h5>
                             Parker
                         </h5>
                     </div>
                 </a>
-                <a href="http://127.0.0.1:51253/Titanic.html">
+                <a href="films/titanic.html">
                     <div class="card card4">
                         <h5>
                             Titanic
@@ -83,5 +79,4 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+</body></html>
